--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,8 @@
-<span>&copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}</span>
+<span>&copy; {{ site.time | date: '%Y' }} {{ site.owner.name }} Subscribe <a href="/feed.xml">via RSS</a>. Find me on <a href="http://twitter.com/mtdavis00">Twitter</a>.</p>
+
+    <p>Hosted on <a href="http://pages.github.com">GitHub Pages</a>. Design and code are open source: <a href="https://github.com/mt-davis/mt-davis.github.io">fork me</a></p>
+
+  </div>
+
+</footer>
+</span>
