added robot.txt and added site owner to post.html line 37

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@
         {% if site.reading_time %}
         <p class="entry-reading-time">
           <i class="fa fa-clock-o"></i>
-          {% include read-time.html %}
+          {% include read-time.html %} | Written By: {{ site.owner.name }}
         </p><!-- /.entry-reading-time -->
         {% endif %}
       </div><!-- /.header-title-wrap -->
